--- a/flower.html
+++ b/flower.html
@@ -14,7 +14,7 @@
     <div class="principal">
       <h1 class="titulo">
         <p>Por ser la mejor amiga que he tenido, estas flores virtuales te dedico, eres una persona maravillosa, se que no son flores 
-          reales pero por lo menos no se marchitaran jeje, me siento afortunado de haberte conocido, y siempre deseare lo mejor para ti 
+          reales pero por lo menos no se marchitaran jeje, me siento afortunado de haberte conocido, y siempre deseare lo mejor para ti, 
            muchas gracias por todo. <br> TE QUIERO MUCHITO ;)</p>
       </h1>
       <div class="night"></div>
